Fix contact icon spacing

--- a/stylesheets/main-index.css
+++ b/stylesheets/main-index.css
@@ -13,8 +13,8 @@
 	display: inline-block;
 	margin-top: 1rem;
 	font-size: 1.2rem;
-	margin-right: 2rem;
-	margin-left: 1.2rem;
+	margin-right: 1.2rem;
+	margin-left: 1.1rem;
 	font-color: #5C5C8A;
 }
 
